tests/paczka2/big_fuzzy/94511431.err
Error in line 1: jhlhyzsmMf A287 52,2
Error in line 4: 3lGNr A287 39,1
Error in line 5: 3lGNr S795 32,9
Error in line 9: 5ZW5o A287 99,1
Error in line 7: mqBNCnGXgw S451 95,4
Error in line 12: 5ZW5o A444 11,2
Error in line 14: mqBNCnGXgw A287 11,4
Error in line 34: 7ilIQT5Tvw A444 -2,9
Error in line 38: jhlhyzsmMf S79@ 48,1
Error in line 29: 7ilIQT5Tvw A444 17,8
Error in line 48: 7ilIQT5Tvw S795 T84,7
Error in line 44: 7ilIQT5Tvw S795 57,4
Error in line 69: 3lGNr A444 96,9
Error in line 87: mqBNCnGXgw S451 66,9
Error in line 70: 3lGNr A287 48,4
Error in line 100: 5ZW5o A287 89,2
Error in line 98: A444 A287 221,6
Error in line 104: jhlhyzsmMf S795 90,5
Error in line 107: mqBNCnGXgw A287 35,2
Error in line 113: mqBNCnGXgw S795 4,6
Error in line 117: QiuILlaTq8 A444 39,2
Error in line 111: 7ilIQT5Tvw A287 51,9
Error in line 126: QiuILlaTq8 S795 73,2
Error in line 127: QiuILlaTq8 A287 44,1
Error in line 131: QiuILlaTq8 S451 -1,9
Error in line 115: mqBNCnGXgw A287 18,5
Error in line 135: QiuILlaTq8 S451 49,2
Error in line 130: 3lGNr A287 24,3
Error in line 148: 5ZW5o S795 80,4
Error in line 165: 7ilIQT5Tvw A287 72,7
Error in line 170: jhlhyzsmMf A444 78,9
Error in line 174: 7ilIQT5Tvw A444 88,6
Error in line 177: 7ilIQT5Tvw S795 67,4
Error in line 201: mqBNCnGXgw S451 31,56
Error in line 167: QiuILlaTq8 A444 65,8
Error in line 187: 5ZW5o A287 96,5
Error in line 205: 5ZW5o S451 96,6
Error in line 189: 7ilIQT5Tvw A287 83,0
Error in line 207: 5ZW5o A444 85,8
Error in line 211: 7ilIQT5Tvw A444 3,9
Error in line 227: A444 A287 49,3
Error in line 228: A444 A444 26,6
Error in line 233: A444 S795 59,9
Error in line 229: QiuILlaTq8 A444 64,1
Error in line 248: 7ilIQT5Tvw A%%% 90,9
Error in line 245: 7ilIQT5Tvw A444 10,2
